--- a/AutomationToolkit/.classpath
+++ b/AutomationToolkit/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry including="colleft.png|colright.png|column.png|diamond.png|eleft.png|eright.png|file.png|line.png|lineleft.png|lineright.png|overlaperight.png|staggeredcol.png|staggeredcolwith.png|v.png|wedge.png|wedgeleft.png|wedgeright.png" kind="src" output="images" path="images"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
